# math_lib

./: .gitignore  Cargo.toml  model.txt  settings.txt
src/: commands.rs  flags.rs  main.rs  settings.rs
src/compiling/: compiler.rs  error.rs  formula.rs  math_file.rs  mod.rs  types.rs  verification.rs
src/parsing/: formula.rs  mod.rs  read_file.rs  types.rs
src/serializing/: binary_conversion.rs  mod.rs  read_write.rs  rpn.rs  traits.rs  vectorizable.rs
src_editor/: event_handling.rs  events.rs  main.rs
src_editor/graphics/: display.rs  file.rs  menu.rs  mod.rs
src_editor/library_data/: binary_conversion.rs  mod.rs  read.rs  rpn.rs  types.rs  vectorizable.rs
src_editor/parsing/: formula.rs  mod.rs  parser.rs  sections.rs  types.rs
