[package]
name = "math_lib"
version = "0.1.0"
edition = "2021"
default-run = "math_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_clap = "0.1.0"
termwiz = "0.19.0"

[[bin]]
name = "math_lib"
path = "src/main.rs"

[[bin]]
name = "mled"
path = "src_editor/main.rs"
